Refactored project